# podcast-to-text

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-01-31-pipeline-refactor-design.md  2026-01-31-pipeline-refactor-impl.md  2026-02-01-qwen-asr-design.md  2026-02-01-qwen-asr-impl.md
src/podcast_to_text/: __init__.py  __main__.py  config.py  downloader.py  formatter.py  main.py  pipeline.py  qwen_transcriber.py  transcriber.py
src/podcast_to_text/steps/: __init__.py  cleanup.py  download.py  format.py  save.py  transcribe.py
